# CMakeList.txt: проект CMake для AISD-4; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)

project ("AISD-4")

# Добавьте источник в исполняемый файл этого проекта.
add_executable (AISD-4 "AISD-4.cpp" "AISD-4.h")

# TODO: Добавьте тесты и целевые объекты, если это необходимо.
